--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Teradata Covalent - Angular Material Design UI Platform</title>
+  <title>Teradata - UDI - Unified Data Integration Studio</title>
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
